li spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ ul, ol {
 
 #body li {
   padding-left: .5rem;
-  padding-bottom:1rem;
+  padding-bottom:.5rem;
 }
 
 ol {
